--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.3",
     "next": "15.5.4",
+    "primereact": "^10.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
